--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,101 @@ h3 {
   margin-bottom: 10px;
   padding: 10px 10px 10px 10px;
   background: grey;
+  display: block;
 }
 
 /*"The Classy Roommate"*/
 
+#audrey {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:10px solid #021a40;
+  background-color:blue;
+}
 
-/*"The Neurotic New Yorker"*/
+/*"The Neurotic New Yorker"*/ 
+#newyork {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:10px solid #021a40;
+  background-color:blue;
+  position: absolute;
+}
+#woody {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:60px;
+  border:10px solid #021a40;
+  background-color:blue;
+  float:right;
+}
+}
+.NYC {
+position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
 
-  
 /*"The Change the World Roommate"*/
 
+#Obama {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:10px solid #021a40;
+  background-color:blue;
+  float: left;
+}
+#rosie {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:10px solid #021a40;
+  background-color:blue;
+  float: right;
+}
 
 /*"The Art History Major"*/
 
+#art {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:5px solid #021a40;
+  background-color:blue;
+}
+#picasso {
+  height: 300px;
+  margin-left: 13%;
+}
+#warhol {
+  height: 300px;
+}
 /*"New Theme"*/
-
+#room {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding:10px;
+  border:5px solid #021a40;
+  background-color:blue;
+}
+#natural1 {
+  height: 300px;
+  width: 300px;
+  margin-left: 13%;
+}
+#natural2 {
+  width: 300px;
+  height: 300px;
+}
