--- a/css/style.css
+++ b/css/style.css
@@ -34,12 +34,47 @@ h3 {
 
 /*"The Classy Roommate"*/
 
+body div:first-of-type img {
+  border-color: #FF6666;
+  border-width: 15px;
+  border-style: solid;
+  display: block;
+  margin: auto;
+}
 
 /*"The Neurotic New Yorker"*/
 
+body div:nth-of-type(2) div img:first-of-type {
+  border-color: #FF6666;
+  border-width: 1c5px;
+  border-style: solid;
+  display: block;
+  float: left;
+}
+
+body div:nth-of-type(2) div img:last-of-type {
+  border-color: #FF6666;
+  border-width: 1c5px;
+  border-style: solid;
+  display: block;
+  float:right;
+}
+
+body div:nth-of-type(2) div {
+  display: block;
+  margin: auto;
+  width: 70%;
+}
   
 /*"The Change the World Roommate"*/
 
+body div:nth-of-type(3) img {
+  border-color: #003399;
+  border-width: 15px;
+  border-style: solid;
+  display: block;
+  margin: auto;
+}
 
 /*"The Art History Major"*/
 
