--- a/css/style.css
+++ b/css/style.css
@@ -33,15 +33,80 @@ h3 {
 }
 
 /*"The Classy Roommate"*/
-
+#audrey {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 10px;
+  border: 10px solid #021a40;
+  background-color: blue;
+}
+ 
 
 /*"The Neurotic New Yorker"*/
 
+#newyork {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 10px;
+  border: 10px solid #021a40;
+  background-color: blue;
+  float: left;
+}
   
+#nyc {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 60px;
+  border: 10px solid #021a40;
+  background-color: blue;
+  float: right;
+}
 /*"The Change the World Roommate"*/
+#obama {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 10px;
+  border: 10px solid #021a40;
+  background-color: blue;
+  float: left;
+}
 
+#rosie {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 9px;
+  border: 9px solid #021a40;
+  background-color: red;
+  float: right;
+}
 
 /*"The Art History Major"*/
+#art {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  padding: 10px;
+  border: 5px solid #021a40;
+  background-color: blue;
+}
+#picasso {
+  height: 350px;
+  margin-left: 13%;
+}
 
+#warhol {
+  height: 350px;
+}
 /*"New Theme"*/
-
+#background1 {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 500px;
+  height: 350px;
+}
