--- a/css/style.css
+++ b/css/style.css
@@ -33,13 +33,34 @@ h3 {
 }
 
 /*"The Classy Roommate"*/
-
+body div:first-of-type img{
+  border-color: #FF6666;
+  border-width: 15px;
+  border-style: solid;
+  margin-left: 33%
+}
 
 /*"The Neurotic New Yorker"*/
+body div:nth-of-typle(2) img:first-of-type{
+  border-color: #FF6666;
+  border width 25px;
+  border-style: solid;
+  display: block;
+  margin: auto;
+  float: left;
+}
 
+body div:nth-of-type(2) img:last-of-type{
+  border-color: #FF6666;
+  border width 25px;
+  border-style: solid;
+  display: block;
+  margin: auto;
+  float; right;
+}
   
 /*"The Change the World Roommate"*/
-
+body div: nth-of-type(3)
 
 /*"The Art History Major"*/
 
